<resources>
    <string name="app_name">Motor2Control</string>
    <string name="action_settings">Settings</string>
    <string name="btnOn">On</string>
    <string name="btnOff">Off</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general" translatable="false">General</string>

    <string name="pref_title_social_recommendations" translatable="false">Enable social recommendations</string>
    <string name="pref_description_social_recommendations" translatable="false">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name" translatable="false">Display name</string>
    <string name="pref_default_display_name" translatable="false">John Smith</string>

    <string name="pref_title_add_friends_to_messages" translatable="false">Add friends to messages</string>


    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync" translatable="false">Data &amp; sync</string>

    <string name="pref_title_sync_frequency" translatable="false">Sync frequency</string>


    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings" translatable="false">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications" translatable="false">Notifications</string>

    <string name="pref_title_new_message_notifications" translatable="false">New message notifications</string>

    <string name="pref_title_ringtone" translatable="false">Ringtone</string>
    <string name="pref_ringtone_silent" translatable="false">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="TitleMotor1">Motor 1</string>
    <string name="TitleMotor2">Motor 2</string>
    <string name="action_about">About</string>
    <string name="pref_Title_Telephone">Telephone</string>
    <string name="WarningConfigurePhone">Please configure the phonenumber first in the settings menu.</string>
    <string name="pref_Title_SecretKey">Secret Key</string>
    <string name="pref_default_SecretKey">SecretKey</string>
    <string name="pref_Motor1_Status" translatable="false">pref_Motor1_Status</string>
    <string name="pref_Motor2_Status" translatable="false">pref_Motor2_Status</string>
    <string name="btnOpenDoor">Open Door</string>
    <string name="TitleDoor">Door</string>
    <string name="txtYes">Yes</string>
    <string name="txtNo">No</string>
    <string name="txtConfirmationOpenDoor">Do you really want to open the Door?</string>

</resources>
